# agentic-dotfiles

./: .gitignore  README.md  settings.json  settings.local.json
.claude/: settings.local.json
.claude/hooks/: test_hogger.py
agents/helper-scripts/: analyse-helper-scripts.md  create-helper-script.md
commands/j/: ct.md  diagrams.md  do.md  ffs.md  prime.md  vjs-init.md  vjs.md
hooks/: hogger.py
misc/: CDK.md  CODING_PRINCIPLES.md  Makefile  PRINCIPLES.md  PYTHON_HELPER_SCRIPTS.md  README.md  STATIC_SITES.md  TOOLS.md  VITE_SITES.md
rules/: agnostic_examples.md  caching.md  claude_skills.md  claude_skills_docs.md  claude_skills_scripts.md
rules/claude_skills/: docs.md  environments.md  evals.md  index.md  scripts.md  statefulness.md
rules/github-actions/: caching.md  latest-versions.md  reusable-actions-docs.md
rules/python/: RULES.md  cli.md  tests.md  uv.md
rules/typescript/: bun.md  (+3 more)
scripts/: README.md  mermaid_complexity.py  setup_diagrams.py
skills/: CLAUDE.md
skills/setup-fullstack/resources/backend/: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
skills/setup-fullstack/resources/backend/server/: config.py  db.py  models.py
skills/setup-fullstack/resources/backend/server/api/: admin.py  app.py  app_state.py  routes.py  schemas.py
skills/setup-fullstack/resources/backend/server/backup/: __init__.py  lifecycle.py  restore.py
skills/setup-fullstack/resources/backend/server/storage/: __init__.py  base.py
skills/setup-fullstack/resources/backend/server/storage/backup/: __init__.py  dump.py  lifecycle.py  pointer.py  restore.py  url.py
skills/setup-fullstack/resources/backend/tests/: conftest.py
skills/setup-fullstack/resources/backend/tests/api/: __init__.py  test_backup_roundtrip.py  test_items.py  test_notes.py  test_routes.py  test_static_mount.py
skills/setup-fullstack/resources/backend/tests/unit/: test_backup_dump_restore.py  test_backup_helpers.py  test_backup_lifecycle.py  test_backup_url.py  test_db.py
workflows/: README.md  gooddocs-audit.js
(+469 files in other folders)
