[project]
name = "server"
version = "0.1.0"
description = "Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle errors + warnings
    "F",            # pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "C4",           # flake8-comprehensions
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
    "SIM",          # flake8-simplify
    "ARG",          # flake8-unused-arguments
    "N",            # pep8-naming
    "S",            # flake8-bandit
    "PT",           # flake8-pytest-style
]
ignore = [
    "B008",   # FastAPI Depends() in argument defaults is idiomatic
    "S101",   # asserts are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG", "PT011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["server", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=server",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["server"]
branch = true
omit = ["server/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
